# open-slm

./: LICENSE  README.md  pyproject.toml  train.py  utils.py
notebooks/: look-into-snac-dataset.ipynb  test.ipynb  train.ipynb
